# robot_pose_ekf

./: CMakeLists.txt  package.xml
include/robot_pose_ekf/: odom_estimation.hpp  odom_estimation_node.hpp
launch/: example_with_gps.launch.xml  robot_pose_ekf.launch.xml  test_robot_pose_ekf.launch.xml
nodes/: wtf.py
src/: nonlinearanalyticconditionalgaussianodo.cpp  odom_estimation.cpp  odom_estimation_node.cpp
test/: test_robot_pose_ekf.cpp  test_robot_pose_ekf_zero_covariance.cpp
test/config/: test_robot_pose_ekf_params.yaml  test_robot_pose_ekf_zero_covariance_params.yaml
test/data/: test_robot_pose_ekf_params.yaml  test_robot_pose_ekf_zero_covariance_params.yaml
test/data/ekf_test2_indexed/: metadata.yaml
test/launch/: test_robot_pose_ekf.test.py  test_robot_pose_ekf_zero_covariance.test.py
