<package format="3">
    <name>robot_pose_ekf</name>
    <version>1.16.0</version>
    <description>

        The Robot Pose EKF package is used to estimate the 3D pose of a robot, based on (partial) pose measurements coming from different sources. It uses an extended Kalman filter with a 6D model (3D position and 3D orientation) to combine measurements from wheel odometry, IMU sensor and visual odometry. The basic idea is to offer loosely coupled integration with different sensors, where sensor signals are received as ROS messages.

    </description>
    <author>Wim Meeussen</author>
    <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/robot_pose_ekf</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>geometry_msgs</depend>  
    <depend>nav_msgs</depend>
    <depend>liborocos-bfl-dev</depend>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>ubica_rclcpp_utils</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ros_testing</test_depend>
    <test_depend>rosbag2</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
